--- a/packages/app/studio/src/ui/devices/audio-effects/AudioEffectCompositeDeviceEditor.sass
+++ b/packages/app/studio/src/ui/devices/audio-effects/AudioEffectCompositeDeviceEditor.sass
@@ -3,7 +3,6 @@
 component
   display: flex
   align-items: flex-start
-  gap: 0.5em
 
   .mix
     display: grid
